data/all_generated_tests/raw_wast_tests/if_IncorrectConditionEvaluation_1736.wast
;; 7. **Uninitialized Variable Condition**: Design a test where the condition depends on an uninitialized variable or a default value. Verify if both implementations correctly handle uninitialized states affecting branching. Check if one implementation allows incorrect branching due to uninitialized conditions.

(assert_invalid
  (module (func $uninitialized-condition
    (local $x i32)
    (if (result i32) (local.get $x) (i32.const 1) (else (i32.const 0)))
  ))
  "uninitialized variable"
)